<package>
  <name>rviz_diffdrive_teleop_plugin</name>
  <version>0.1.0</version>
  <description>
  ...
  </description>
  <license>BSD</license>
  <url>http://ros.org/wiki/rviz_diffdrive_teleop_plugin</url>
  <author>hdeeken</author>
  <maintainer email="hdeeken@uni-osnabrueck.de">Henning Deeken</maintainer>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rviz</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <export>
    <rviz plugin="${prefix}/plugin_description.xml"/>
  </export>
</package>
